# signing-receipt-verifier

./: .gitignore  AUTHORS  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_vectors.py
test-vectors/TV-001-valid-chain-no-anchor/: README.md
test-vectors/TV-002-valid-anchored-batch/: README.md  anchor-proof.json  expected.json
test-vectors/TV-003-hash-chain-break/: README.md  expected.json  receipts.json
test-vectors/TV-004-invalid-signature/: README.md  expected.json  receipts.json
test-vectors/TV-005-sequence-gap/: README.md  expected.json  receipts.json
test-vectors/TV-006-duplicate-sequence/: README.md  expected.json  receipts.json
test-vectors/TV-007-forked-sequence/: README.md  expected.json  receipts.json
test-vectors/TV-008-anchor-root-mismatch/: README.md  anchor-proof.json  expected.json  receipts.json
test-vectors/TV-009-merkle-path-mismatch/: README.md  anchor-proof.json  expected.json  receipts.json
test-vectors/TV-010-unknown-algorithm/: README.md  expected.json  receipts.json
test-vectors/TV-011-key-not-found/: README.md  expected.json  receipts.json
test-vectors/TV-012-canonical-key-ordering/: README.md  expected.json  keys.json  receipts.json
test-vectors/TV-013-canonical-unicode-string/: README.md  (+2 more)
tests/: test_audit_regressions.py  test_audit_verification.py  test_canonical.py  test_go_canonical.py  test_merkle.py  test_vectors.py
verifier/: __init__.py  canonical.py  cli.py  crypto.py  merkle.py  models.py  strict_json.py  verify.py
(+24 files in other folders)
