[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "receipt-chain-verifier"
version = "0.1.0"
description = "Minimal verifier for the Receipt Chain Verification Protocol v0.1"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
receipt-verify = "verifier.cli:main"

[tool.setuptools.packages.find]
include = ["verifier*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
